Fixed Goals menu where it was getting cut off by content to its right

--- a/_sass/nav.scss
+++ b/_sass/nav.scss
@@ -155,11 +155,16 @@ $nav-height: $logo-height + $pad-small * 2;
 
 .fixed-side-nav-page{
 	.fixed-side-nav{
-	   	width: 20%;
-   		min-width: 280px;
+	   	width: 25%;
     	position: fixed;	
 		height: #{ 768 - $nav-height - 10 };
 		background-color: #FFF;
+		
+		@include respond-to(all-mobiles){
+			position: relative;
+			width: 100%;	
+			height: auto !important;		
+		}
 		
 		.nav{
 			height: 100%;
@@ -170,8 +175,14 @@ $nav-height: $logo-height + $pad-small * 2;
 		}
 	}
 	.fixed-side-nav ~ .side-content{
-		margin-left: 22%;
+		margin-left: 27%;
 		padding-top: $nav-height;
+		
+		@include respond-to(all-mobiles){
+			width: 100%;
+			margin-left: 0px;
+			padding: $pad-large;
+		}
 	}
 	.content > .fixed-side-nav:first-child{
 		padding-top: #{ $nav-height - 2 };	
